!fixup [FIX] web_editor: Align all elements in Firefox

--- a/addons/web_editor/static/src/less/web_editor.common.less
+++ b/addons/web_editor/static/src/less/web_editor.common.less
@@ -303,7 +303,7 @@ a.o_underline {
 // Convert HTML to CSS styles in browsers using those
 .o-align-fix(@align) {
     [align="@{align}"] {
-        text-align: @align;
+        text-align: @align !important;
     }
 }
 .o-align-fix(left);
